Fix paragraph spacing

--- a/resources/css/global.pcss
+++ b/resources/css/global.pcss
@@ -83,7 +83,7 @@ li {
 p {
   font-size: var(--font-size--base);
   line-height: var(--line-height--base);
-  margin: 0;
+  margin: 0 0 var(--line-height--base) 0;
 }
 
 .nav-list {
